# consensus_app

./: .gitignore  Cargo.toml  README.md
src/: application.rs  blockchain.rs  codec.rs  lib.rs  proof.rs  server.rs  transaction.rs
src/data/: account.json  commit_4.txt  commit_5.txt  my_contract_hello.contract_class.json  proof.json  status.txt  validators.txt
web/: Cargo.toml  index.html  script.js
web/src/: lib.rs
