[package]
name = "consensus_app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"

[dependencies]
async-iterator = "2.3.0"
bytes = "1.9.0"
prost = "0.11"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
tendermint = "0.32.2"
tendermint-abci = { version = "0.32.2", features = ["client", "kvstore-app"]}
tendermint-proto = "0.32.2"
tendermint-light-client-verifier = "0.32.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
