[package]
name = "consensus_app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "sequencer"
path = "src/bin/sequencer.rs"

[dependencies]
anyhow = "1.0.66"
async-iterator = "2.3.0"
bincode = "1.3.3"
bitvec = "1.0.1"
bytes = "1.9.0"
eyre = "0.6.12"
iamgroot = "0.2.8"
once_cell = "1.20.2"
prost = "0.11"
regex = "1.11.1"
serde = "1.0"
serde_json = "1.0.134"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "db1fa598232f0698d942cc974f481b5d888ac080", features = ["ledger"] }
starknet-crypto = "0.7.4"
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
tendermint = "0.32.2"
tendermint-abci = { version = "0.32.2", features = ["client", "kvstore-app"]}
tendermint-proto = "0.32.2"
tendermint-light-client-verifier = "0.32.2"
tendermint-rpc = { version = "0.32.2", features = ["http-client"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.2.1", features = ["v4"] }
