[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde-wasm-bindgen = "0.6.5"
tendermint = "0.32.2"
tendermint-light-client-verifier = "0.32.2"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"] }

[workspace]
