[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
iamgroot = "0.2.8"
eyre = "0.6.12"
once_cell = "1.20.2"
regex = "1.11.1"
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
starknet-crypto = "0.7.4"
tendermint = "0.32.2"
tendermint-light-client-verifier = "0.32.2"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"] }

[workspace]
